--- a/1.Curso/EMonitor/app/src/main/res/values/strings.xml
+++ b/1.Curso/EMonitor/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">E-Monitor</string>
+    <string name="download_earthquakes_network_error">Huvo un error al desacargar los datos de terremotos</string>
+    <string name="usgs_all_hour_earthquakes_url">https://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/all_hour.geojson</string>
+    <string name="richter">Richter</string>
+    <string name="longitude">Longitud</string>
+    <string name="latitude">Latitud</string>
 </resources>
